finished footer, fixed spacing issues, created page template

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,21 @@
+body {
+    font-family: Segoe UI;
+    color: #24292e;
+    font-size: 25px;
+    /* background-image: url(../images/background.png);              ######################################## PERHAPS? ######################################## */
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html,
+body {
+    height: 100%;
+    font-size: 20px;
+}
+
 /* Navbar */
 
 nav ul {
@@ -21,12 +39,12 @@ nav li {
 
 nav a {
     float: left;
-    /* display: block; */
     color: #333333;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    height: 30px;
+    height: 36px;
+    line-height: 36px;
     color: white;
     font-size: 20px;
 }
@@ -37,30 +55,38 @@ a:active {
 
 /* Footer */
 
+X {
+    text-align:center;
+    line-height:35px;
+    width:100%;
+    height:35px;
+    font-size:18px;
+}
+
+
 footer {
-    position: fixed;
-    left: 0;
-    bottom: 0%;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    width: 100%;
+    position: relative;
+    height: 40px;
+    margin-top: -40px;
+    line-height:40px;
+    width:100%;
+    clear: both;
     text-align: center;
     font-size: 18px;
-    background-color: white;
-    border-top: 1px #24292e solid;
+    color: whitesmoke;
+    background-color: #24292e;
+    text-align:center;
 }
 
-
-/* Body and Headers */
-
-body {
-    padding-top: 65px;
-    padding-bottom: 55px;
-    font-family: Segoe UI;
-    color: #24292e;
-    font-size: 25px;
-    /* background-image: url(../images/background.png);              ######################################## PERHAPS? ######################################## */
+#container {
+    min-height: 100%
 }
+
+#main {
+    overflow: auto;
+    padding-block: 100px;
+}
+
 
 .centered {
     text-align: center;
@@ -79,6 +105,12 @@ body {
 .biggertext {
     font-size: 115%;
 }
+
+/* hr {
+    width: 85%;
+    <hr>
+    margin-bottom: 10px
+} */
 
 
 /*
